MO2MP-5178 : Fixed requirement gap issue of "No Bank Added"

--- a/src/app/sign-up/edit-profile/edit-profile.component.scss
+++ b/src/app/sign-up/edit-profile/edit-profile.component.scss
@@ -408,9 +408,6 @@ app-edit-profile {
     text-align: center;
     color: $no-bank-account-color;
     margin: 50px 30px 10px 30px;
-    &.no-bank-details {
-      margin-bottom: 4px;
-    }
   }
   .joint-account-desc {
     font-family: $muli-italic;
